--- a/style.css
+++ b/style.css
@@ -3,50 +3,44 @@
 }
 
 body {
+  font-family: Helvetica;
+  font-size: 22px;
   height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-}
-
-html {
-  height: 100vh;
-  font-family: Helvetica;
+  overflow: scroll;
+  color: seashell;
+  opacity: 0.9;
   background-color: black;
 }
 
-/* Navbar */
-header {
-  position: fixed;
-  width: 100%;
+/* Hero */
+
+.hero {
+  background-image: url(/images/img-mission-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  height: 700px;
+  width: 1200px;
 }
 
-.navbar {
-  height: 69px;
-  border-bottom: 1px solid seashell;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; 
- img {
-  height: 50px;
-  margin-left: 10px;
-  color: seashell;
-  opacity: 0.8;
+/* 3rd section */
+
+.section-3 {
+  background-image: url(/images/img-locations-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  height: 500px;
+  width: 1200px;
 }
-ul li a {
-  list-style: none;
-  text-decoration: underline;
-  color: seashell;
-  opacity: 0.9;
-} 
-.links {
-  width: 25%;
-  font-size: 22px;
-}
-.list-items {
-  width: 100%;
-  height: 69px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+
+/* images */
+
+.images {
+  width: 300px;
+  height: 200px;
 }
