--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ h3 {
   align-items: center;
 }
 .address {
-  border: 2px solid green;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -150,4 +149,21 @@ h3 {
 h4 {
   color: seashell;
   opacity: 1;
+}
+.contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.contact,
+h2 h5 p {
+  color: seashell;
+  opacity: 0.9;
+}
+.copyright {
+  margin-left: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
